fix: use toRem for address cell gap to match codebase convention

--- a/src/components/Company/Locations/LocationsList/List.module.scss
+++ b/src/components/Company/Locations/LocationsList/List.module.scss
@@ -1,6 +1,6 @@
 .addressCell {
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: toRem(4);
   container-type: normal;
 }
